--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,6 @@ android {
     compileSdk 31
     buildToolsVersion "30.0.3"
 
-
     defaultConfig {
         applicationId "com.example.hilttutorial"
         minSdk 29
@@ -33,11 +32,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    packagingOptions {
-        exclude 'META-INF/gradle/incremental.annotation.processors'
-    }
+//    packagingOptions {
+//        exclude 'META-INF/gradle/incremental.annotation.processors'
+//    }
     buildFeatures {
-        viewBinding true
+        dataBinding=true
     }
 }
 
@@ -48,12 +47,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 
-    apply plugin: 'kotlin-kapt'
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-android-compiler:2.37"
 
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+//    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    implementation "androidx.fragment:fragment-ktx:1.4.0" // for the "by viewModels()"
+
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:4.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
