--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,12 @@ buildscript {
     ext.kotlin_version = "1.6.0-RC2"
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+//        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -19,7 +19,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+//        jcenter()
     }
 }
 
