--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,13 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+task killApp(type: Exec) {
+    println("Executing Killapp")
+    commandLine 'adb','-d','shell','am','kill','com.example.hilttutorial'
+}
+
+task showAppRunning(type: Exec) {
+    println("Executing showAppRunning")
+    commandLine 'adb','-d','shell','ps','|','grep','com.example.hilttutorial'
+}
